--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -35,18 +35,50 @@ button {
   font-family: inherit;
 }
 
+a {
+  text-decoration: none;
+  color: #102244;
+}
+
 .App {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
+header {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  align-items: center;
+  padding: 40px;
+}
+
+nav {
+  display: flex;
+  flex-wrap: nowrap;
+}
+nav a {
+  padding: 0 20px;
+}
+
+.SearchForm {
+  display: flex;
+  width: 60%;
+}
+.SearchForm button {
+  width: 100px;
+  height: 40px;
+}
+.SearchForm input {
+  width: 100%;
+}
+
 .film-items_container {
-  margin-top: 30px;
   width: 92%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
   gap: 15px;
   color: #102244;
 }
@@ -64,20 +96,6 @@ button {
 .film-items_container .FilmItem .film-title {
   margin: 9px 0;
   font-size: 19px;
-}
-
-.SearchForm {
-  display: flex;
-  justify-content: space-between;
-  width: 60%;
-  margin-top: 30px;
-}
-.SearchForm button {
-  width: 100px;
-  height: 40px;
-}
-.SearchForm input {
-  width: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
