--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -41,18 +41,52 @@ button {
   font-family: inherit;
 }
 
+a {
+  text-decoration: none;
+  color: $title-color;
+}
+
 .App {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
+header {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  align-items: center;
+  padding: 40px;
+}
+
+nav {
+  display: flex;
+  flex-wrap: nowrap;
+  a {
+    padding: 0 20px;
+  }
+}
+
+.SearchForm {
+  display: flex;
+  width: 60%;
+
+  button {
+    width: 100px;
+    height: 40px;
+  }
+
+  input {
+    width: 100%;
+  }
+}
+
 .film-items_container {
-  margin-top: 30px;
   width: 92%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
   gap: 15px;
   color: $title-color;
 
@@ -75,18 +109,3 @@ button {
   }
 }
 
-.SearchForm {
-  display: flex;
-  justify-content: space-between;
-  width: 60%;
-  margin-top: 30px;
-
-  button {
-    width: 100px;
-    height: 40px;
-  }
-
-  input {
-    width: 100%;
-  }
-}
