--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,5 @@
-$title-color: #102244;
-$light-title-color: #efe6d7;
+$accent-color: #102244;
+$light-color: #efe6d7;
 $title-font: Almarai, sans-serif;
 
 @font-face {
@@ -19,7 +19,7 @@ body {
   padding: 0;
   font-size: 17px;
   font-family: $title-font;
-  color: $title-color;
+  color: $accent-color;
 }
 
 input {
@@ -28,22 +28,22 @@ input {
   padding: 0 10px;
   font-family: inherit;
   font-size: inherit;
-  border: 2px solid $title-color;
-  color: $title-color;
+  border: 2px solid $accent-color;
+  color: $accent-color;
 }
 
 button {
   border-radius: 0;
-  background-color: $title-color;
-  border: 2px solid $title-color;
-  color: $light-title-color;
+  background-color: $accent-color;
+  border: 2px solid $accent-color;
+  color: $light-color;
   font-size: inherit;
   font-family: inherit;
 }
 
 a {
   text-decoration: none;
-  color: $title-color;
+  color: $accent-color;
 }
 
 .App {
@@ -63,6 +63,7 @@ header {
 nav {
   display: flex;
   flex-wrap: nowrap;
+
   a {
     padding: 0 20px;
   }
@@ -88,14 +89,14 @@ nav {
   flex-wrap: wrap;
   justify-content: center;
   gap: 15px;
-  color: $title-color;
+  color: $accent-color;
 
   .FilmItem {
     width: 200px;
     height: 380px;
     background-color: #102244;
     padding: 10px;
-    color: $light-title-color;
+    color: $light-color;
 
     img {
       width: 200px;
@@ -103,9 +104,44 @@ nav {
     }
 
     .film-title {
-      margin: 9px 0;
       font-size: 19px;
+      color: $light-color;
     }
   }
 }
 
+.page-container {
+  display: flex;
+  justify-content: center;
+  column-gap: 20px;
+  margin-bottom: 100px;
+
+  .poster {
+    padding: 12px;
+    background-color: $accent-color;
+    img {
+      height: 450px;
+    }
+  }
+
+
+  .info {
+    padding: 12px;
+    background-color: #cfd4de;
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+
+    .title {
+      font-weight: 700;
+      font-size: 30px;
+      text-decoration: underline;
+      padding: 20px;
+    }
+
+    span {
+      font-weight: 700;
+    }
+  }
+}
