--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -46,6 +46,14 @@ a {
   color: $accent-color;
 }
 
+a:hover {
+  text-decoration: underline;
+}
+
+.active {
+  text-decoration: underline;
+}
+
 .App {
   display: flex;
   flex-direction: column;
