--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -33,6 +33,7 @@ button {
   color: #efe6d7;
   font-size: inherit;
   font-family: inherit;
+  padding: 8px 12px;
 }
 
 a {
@@ -58,16 +59,14 @@ header {
   display: flex;
   justify-content: space-between;
   width: 70%;
-  align-items: center;
   padding: 40px;
 }
 
 nav {
   display: flex;
   flex-wrap: nowrap;
-}
-nav a {
-  padding: 0 20px;
+  align-items: center;
+  column-gap: 20px;
 }
 
 .SearchForm {
@@ -135,6 +134,22 @@ nav a {
 }
 .page-container .info span {
   font-weight: 700;
+}
+
+.dropdown .dropdown-content {
+  display: none;
+  position: absolute;
+  z-index: 1;
+  background-color: rgba(207, 212, 222, 0.8);
+}
+.dropdown .dropdown-content a {
+  padding: 8px 20px;
+  border: 1px solid #c6cdda;
+}
+
+.dropdown:hover .dropdown-content {
+  display: flex;
+  flex-direction: column;
 }
 
 /*# sourceMappingURL=style.css.map */
